chore: format code with prettier

--- a/index.html
+++ b/index.html
@@ -11,31 +11,40 @@
 			rel="stylesheet"
 		/>
 
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>NewITVision.pl</title>
-		<meta name="description" content="Twoje źródło profesjonalnych usług internetowych! Specjalizujemy się w tworzeniu stron, serwerów do gry Counter Strike oraz zabezpieczaniu for IPS/MyBB i stron internetowych. Z nami Twoje projekty będą bezpieczne i skuteczne.">
-		<meta property="og:title" content="NewITVision.pl">
-		<meta property="og:description" content="Twoje źródło profesjonalnych usług internetowych! Specjalizujemy się w tworzeniu stron, serwerów do gry Counter Strike oraz zabezpieczaniu for IPS/MyBB i stron internetowych. Z nami Twoje projekty będą bezpieczne i skuteczne.">
-		<meta property="og:type" content="website">
-		<meta property="og:site_name" content="NewITVision.pl">
-		<meta property="og:url" content="https://newitvision.pl">
-		<meta property="og:image" content="https://newitvision.pl/default-og-image.png">
-		<meta property="og:image:type" content="image/png">
-		<meta property="og:image:width" content="1600">
-		<meta property="og:image:height" content="720">
-		<meta property="og:image:alt" content="NewITVision">
-		<meta name="keywords" content="Tworzenie stron internetowych, Serwery do gry Counter Strike, Zabezpieczanie for i stron, Usługi internetowe, Profesjonalne strony internetowe, Hosting serwerów gry, Bezpieczeństwo online, Projektowanie witryn, Optymalizacja strony, Rozwiązania internetowe, Marketing internetowy, SEO, E-commerce, Kreacja stron, Dostosowane rozwiązania, Bezpieczny hosting, Zarządzanie treścią, Tworzenie grafiki, Sklepy internetowe, Dostępność 24/7, Projektowanie graficzne, Serwisy społecznościowe, Domeny internetowe, Strony mobilne, Analiza danych, Zarządzanie treścią, Administracja serwerami, Szybkie serwery, E-sklepy, Cyberbezpieczeństwo, Wizualna identyfikacja, Responsive design, Strony responsywne, Rozwój aplikacji, Hosting www, Tworzenie aplikacji mobilnych, Skuteczny marketing online, Analiza ruchu na stronie, Personalizowane rozwiązania, mybb, MyBulletinBoard, MyBB, IPS, IPB, wtyczki IPB, motywy IPB, wtyczki IPS, motywy IPS, aktualizacje ips, motywy mybb">
-		<meta name="language" content="pl">
-		<meta name="msapplication-TileColor" content="#1c1b21">
-		<meta name="msapplication-TileImage" content="images/fav/mstile-144x144.png">
-		<meta name="theme-color" content="#1c1b21">
-		<link rel="canonical" href="https://newitvision.pl">
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/images/fav/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/images/fav/favicon-16x16.png">
-		<link rel="manifest" href="/images/fav/site.webmanifest">
-		<link rel="mask-icon" href="/images/fav/safari-pinned-tab.svg" color="#1c1b21">
+		<meta
+			name="description"
+			content="Twoje źródło profesjonalnych usług internetowych! Specjalizujemy się w tworzeniu stron, serwerów do gry Counter Strike oraz zabezpieczaniu for IPS/MyBB i stron internetowych. Z nami Twoje projekty będą bezpieczne i skuteczne."
+		/>
+		<meta property="og:title" content="NewITVision.pl" />
+		<meta
+			property="og:description"
+			content="Twoje źródło profesjonalnych usług internetowych! Specjalizujemy się w tworzeniu stron, serwerów do gry Counter Strike oraz zabezpieczaniu for IPS/MyBB i stron internetowych. Z nami Twoje projekty będą bezpieczne i skuteczne."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="NewITVision.pl" />
+		<meta property="og:url" content="https://newitvision.pl" />
+		<meta property="og:image" content="https://newitvision.pl/default-og-image.png" />
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="1600" />
+		<meta property="og:image:height" content="720" />
+		<meta property="og:image:alt" content="NewITVision" />
+		<meta
+			name="keywords"
+			content="Tworzenie stron internetowych, Serwery do gry Counter Strike, Zabezpieczanie for i stron, Usługi internetowe, Profesjonalne strony internetowe, Hosting serwerów gry, Bezpieczeństwo online, Projektowanie witryn, Optymalizacja strony, Rozwiązania internetowe, Marketing internetowy, SEO, E-commerce, Kreacja stron, Dostosowane rozwiązania, Bezpieczny hosting, Zarządzanie treścią, Tworzenie grafiki, Sklepy internetowe, Dostępność 24/7, Projektowanie graficzne, Serwisy społecznościowe, Domeny internetowe, Strony mobilne, Analiza danych, Zarządzanie treścią, Administracja serwerami, Szybkie serwery, E-sklepy, Cyberbezpieczeństwo, Wizualna identyfikacja, Responsive design, Strony responsywne, Rozwój aplikacji, Hosting www, Tworzenie aplikacji mobilnych, Skuteczny marketing online, Analiza ruchu na stronie, Personalizowane rozwiązania, mybb, MyBulletinBoard, MyBB, IPS, IPB, wtyczki IPB, motywy IPB, wtyczki IPS, motywy IPS, aktualizacje ips, motywy mybb"
+		/>
+		<meta name="language" content="pl" />
+		<meta name="msapplication-TileColor" content="#1c1b21" />
+		<meta name="msapplication-TileImage" content="images/fav/mstile-144x144.png" />
+		<meta name="theme-color" content="#1c1b21" />
+		<link rel="canonical" href="https://newitvision.pl" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/fav/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/fav/favicon-16x16.png" />
+		<link rel="manifest" href="/images/fav/site.webmanifest" />
+		<link rel="mask-icon" href="/images/fav/safari-pinned-tab.svg" color="#1c1b21" />
 	</head>
 	<body>
 		<div id="root"></div>
